Refactor practice mode settings and enhance word selection algorithms. Update default practice mode to 'random' and improve logic for 'weakness-focus' and 'review' modes in useTypingAnalytics. Adjust UI components in SettingsScreen and localization files for clarity. Update database schema to reflect changes in practice mode options.

--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -29,12 +29,10 @@
   "practice_mode": {
     "title": "Practice Mode",
     "description": "Select the word selection algorithm",
-    "balanced": "Balanced",
-    "balanced_desc": "Balanced mix of weaknesses, review, and new words",
     "weakness": "Weakness Focus",
-    "weakness_desc": "Focus on words you struggle with",
+    "weakness_desc": "Low accuracy words first, in random order",
     "review": "Review Priority",
-    "review_desc": "Prioritize words you're forgetting",
+    "review_desc": "SRS-based review timing priority",
     "random": "Random",
     "random_desc": "Completely random selection"
   },
