Enhance StatsScreen and TypingDisplay components by adding chart range selection and displaying word accuracy statistics. Update localization files for new terms and improve chart data handling based on user-selected ranges. Refactor UI elements for better layout and clarity.

--- a/src/i18n/locales/en/stats.json
+++ b/src/i18n/locales/en/stats.json
@@ -12,6 +12,7 @@
   "accuracy_chart": "Accuracy (%)",
   "words_chart": "Words Completed",
   "last_n_games": "Last {{count}} games",
+  "showing_games": "Showing {{showing}} / {{total}} games",
   "keyboard_heatmap": "Keyboard Heatmap",
   "difficult_transitions": "Difficult Transitions",
   "common_mistakes": "Common Mistakes",
