--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -12,6 +12,8 @@
   "total_time": "Total Time",
   "retry_weak_words": "Retry Weak Words",
   "play_again": "Play Again (All Words)",
-  "back_to_menu": "Back to Menu"
+  "back_to_menu": "Back to Menu",
+  "word_accuracy": "Accuracy",
+  "practice_count": "Practices"
 }
 
