--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -14,6 +14,15 @@
   "play_again": "Play Again (All Words)",
   "back_to_menu": "Back to Menu",
   "word_accuracy": "Accuracy",
-  "practice_count": "Practices"
+  "practice_count": "Practices",
+  "avg_reaction_time": "Avg Reaction Time",
+  "first_key_accuracy": "First Key Accuracy",
+  "word_performance": "Word Performance",
+  "word": "Word",
+  "reaction": "Reaction",
+  "time": "Time",
+  "miss": "Miss",
+  "first_key": "1st Key",
+  "timeout": "Timeout"
 }
 
