refactor: replace Phosphor icons with Lucide icons across components
- Remove Phosphor icons from various components and replace them with Lucide icons for consistency.
- Update imports and icon usage in Header, AddWordDialog, GameOverScreen, SettingsScreen, and others.
- Enhance UI elements by adjusting icon sizes and styles to maintain visual coherence.
- Update localization files to include new terms related to daily statistics and performance tracking.

--- a/src/i18n/locales/en/stats.json
+++ b/src/i18n/locales/en/stats.json
@@ -18,6 +18,32 @@
   "common_mistakes": "Common Mistakes",
   "times": "times",
   "reset_stats": "Reset Statistics",
-  "reset_stats_desc": "Delete all statistics data"
+  "reset_stats_desc": "Delete all statistics data",
+  "tab_overview": "Overview",
+  "tab_daily": "Daily Stats",
+  "daily_stats_title": "Daily Performance",
+  "daily_stats_desc": "View your daily practice records",
+  "date": "Date",
+  "games_played": "Games",
+  "total_words": "Words",
+  "perfect_words": "Perfect",
+  "avg_kps": "Avg KPS",
+  "total_time": "Total Time",
+  "minutes": "min",
+  "seconds": "sec",
+  "streak": "Play Streak",
+  "current_streak": "Current Streak",
+  "best_streak": "Best Streak",
+  "days": "days",
+  "today": "Today",
+  "yesterday": "Yesterday",
+  "this_week": "This Week",
+  "this_month": "This Month",
+  "total_play_time": "Total Play Time",
+  "best_day_kps": "Best KPS Day",
+  "best_day_accuracy": "Best Accuracy Day",
+  "daily_trend": "Daily Trend",
+  "last_n_days": "Last {{count}} days",
+  "no_daily_data": "No Daily Data",
+  "no_daily_data_desc": "Play some games to see your daily statistics"
 }
-
