--- a/src/i18n/locales/ja/stats.json
+++ b/src/i18n/locales/ja/stats.json
@@ -18,6 +18,32 @@
   "common_mistakes": "よくあるミス",
   "times": "回",
   "reset_stats": "統計をリセット",
-  "reset_stats_desc": "すべての統計データを削除します"
+  "reset_stats_desc": "すべての統計データを削除します",
+  "tab_overview": "概要",
+  "tab_daily": "日別統計",
+  "daily_stats_title": "日別パフォーマンス",
+  "daily_stats_desc": "日毎の練習記録を確認できます",
+  "date": "日付",
+  "games_played": "ゲーム数",
+  "total_words": "単語数",
+  "perfect_words": "パーフェクト",
+  "avg_kps": "平均KPS",
+  "total_time": "総時間",
+  "minutes": "分",
+  "seconds": "秒",
+  "streak": "連続プレイ",
+  "current_streak": "現在の連続日数",
+  "best_streak": "最長連続日数",
+  "days": "日",
+  "today": "今日",
+  "yesterday": "昨日",
+  "this_week": "今週",
+  "this_month": "今月",
+  "total_play_time": "総プレイ時間",
+  "best_day_kps": "最高KPS日",
+  "best_day_accuracy": "最高正確率日",
+  "daily_trend": "日別トレンド",
+  "last_n_days": "直近 {{count}} 日",
+  "no_daily_data": "日別データがありません",
+  "no_daily_data_desc": "ゲームをプレイすると日別統計が表示されます"
 }
-
