feat: implement Cloudflare Workers and D1 database integration
- Add server-side logic using Hono framework for handling API requests.
- Create database schema and CRUD operations for words and game scores in D1.
- Introduce authentication middleware for future enhancements.
- Update package.json to include necessary dependencies for Cloudflare Workers.
- Add configuration files for deployment and environment settings.
- Implement initial settings and utility functions for managing game state and statistics.
- Enhance user experience with new features for quick start and preset selection.
- Update localization files to support new features and settings.

--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -23,6 +23,11 @@
   "time": "Time",
   "miss": "Miss",
   "first_key": "1st Key",
-  "timeout": "Timeout"
+  "timeout": "Timeout",
+  "skill_check_complete": "Skill Check Complete!",
+  "recommended_difficulty": "Recommended Difficulty",
+  "apply_recommended": "Apply Recommended Settings",
+  "continue_practicing": "Continue Practicing",
+  "select_preset": "Select Preset"
 }
 
