--- a/src/i18n/locales/ja/settings.json
+++ b/src/i18n/locales/ja/settings.json
@@ -71,6 +71,16 @@
   "language": {
     "title": "言語",
     "description": "アプリの表示言語を選択します"
+  },
+  "reset_all": {
+    "title": "全てを初期化",
+    "description": "すべてのデータ（単語、統計、スコア、設定）を削除して、最初のクイックスタートからやり直せます。この操作は取り消せません。",
+    "button": "全てを初期化",
+    "confirm": "初期化する",
+    "cancel": "キャンセル",
+    "resetting": "初期化中...",
+    "success": "全てのデータを初期化しました。クイックスタートから始められます。",
+    "error": "データの初期化に失敗しました"
   }
 }
 
