--- a/src/i18n/locales/en/menu.json
+++ b/src/i18n/locales/en/menu.json
@@ -3,6 +3,12 @@
   "press_to_start": "Press to Start",
   "no_words_yet": "No words yet. Add words to start practicing!",
   "go_to_words": "Go to Words in the menu to add words",
-  "press_esc_to_exit": "Press Esc during game to exit"
+  "press_esc_to_exit": "Press Esc during game to exit",
+  "quick_start_title": "Quick Start",
+  "quick_start_description": "Start playing immediately to check your typing skills. A short 5-question test with basic words.",
+  "start_skill_check": "Start Skill Check",
+  "quick_start_note": "For first-time users. Basic words will be loaded automatically.",
+  "recommended_presets_title": "Recommended Presets",
+  "recommended_presets_description": "Select a recommended preset to start practicing."
 }
 
