--- a/src/i18n/locales/en/words.json
+++ b/src/i18n/locales/en/words.json
@@ -14,6 +14,7 @@
   "preset_clear_existing": "Clear existing words before loading",
   "preset_load": "Load",
   "preset_hint": "💡 Hint: Import feature for external word lists (like Sushida) coming soon",
+  "preset_after_quickstart": "Temporary words used in the skill check will be automatically deleted. Please select a preset you want to use.",
   "difficulty_beginner": "Beginner",
   "difficulty_intermediate": "Intermediate",
   "difficulty_advanced": "Advanced",
