Add Turso database setup, local development docs, and server improvements
- Add Turso database setup and migration documentation
- Add local development and quick start guides
- Add server implementation and database utilities
- Add development scripts (dev, migrate, setup-local-db)
- Update database schema and types
- Improve preset dialog and recommended presets components
- Update i18n translations for stats
- Update configuration files (package.json, tsconfig.json, wrangler.toml)
- Update .gitignore and README
- Fix ESLint errors (unused variables and any types)

--- a/src/i18n/locales/en/stats.json
+++ b/src/i18n/locales/en/stats.json
@@ -6,6 +6,7 @@
   "keystrokes": "Keystrokes",
   "accuracy": "Accuracy",
   "errors": "Errors",
+  "kps": "KPS",
   "avg_latency": "Avg Latency",
   "performance_history": "Performance History",
   "kps_chart": "Keys Per Second (KPS)",
