feat: Enhance visual appeal with gradient text and update app tagline
- Added a new CSS animation for gradient text to improve UI aesthetics.
- Updated the app tagline in English and Japanese locales for better user engagement.
- Modified the MenuScreen component to apply the gradient text style to the app name.

--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -1,6 +1,6 @@
 {
   "app_name": "TypeFlow",
-  "app_tagline": "タイピング速度を上げるための練習アプリ",
+  "app_tagline": "今までにないタイピング練習アプリ",
   "cancel": "キャンセル",
   "save": "保存",
   "delete": "削除",
