--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "app_name": "TypeFlow",
-  "app_tagline": "Typing practice app to improve typing speed",
+  "app_tagline": "The best typing practice app you've ever seen",
   "cancel": "Cancel",
   "save": "Save",
   "delete": "Delete",
