feat: Implement word practice mode for focused learning
- Added a new `WordPracticeScreen` component to facilitate focused practice on individual words.
- Integrated word practice functionality into the existing game flow, allowing users to start practice sessions from various screens.
- Updated the `GameOverScreen` to recommend words for practice based on user performance.
- Enhanced the `useWordPractice` hook to manage practice state and statistics effectively.
- Introduced new translations for practice-related terms in both English and Japanese.
- Updated relevant components to support the new practice feature, including UI adjustments for better user experience.

--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -29,5 +29,11 @@
   "recommended_difficulty": "Recommended Difficulty",
   "apply_recommended": "Apply Recommended Settings",
   "continue_practicing": "Continue Practicing",
-  "select_preset": "Select Preset"
+  "select_preset": "Select Preset",
+  "practice_recommended": "Focus Practice Recommended",
+  "practice_recommended_desc": "You had trouble with the following words. Let's practice them!",
+  "miss_count_label": "misses",
+  "start_practice": "Practice",
+  "and_more_words": "and {{count}} more",
+  "practice_short": "Practice"
 }
