feat: Enhance WordList component with practice count and actions dropdown
- Added a practice count display to show the number of attempts for each word.
- Replaced individual action buttons with a dropdown menu for editing and deleting words, improving UI organization.
- Updated translations for new terms related to practice, edit, and delete actions in both English and Japanese.

--- a/src/i18n/locales/en/words.json
+++ b/src/i18n/locales/en/words.json
@@ -45,6 +45,10 @@
     "accuracy": "Accuracy",
     "correct": "Correct",
     "miss": "Miss",
-    "mastery": "Mastery"
+    "mastery": "Mastery",
+    "practice": "Practice",
+    "edit": "Edit",
+    "delete": "Delete",
+    "practice_count": "{{count}}x"
   }
 }
