--- a/src/i18n/locales/en/words.json
+++ b/src/i18n/locales/en/words.json
@@ -39,6 +39,8 @@
     "sort_oldest": "Oldest first",
     "sort_alphabetical": "Alphabetical",
     "sort_accuracy": "By accuracy",
+    "sort_practice_count_desc": "Most practiced",
+    "sort_practice_count_asc": "Least practiced",
     "items_per_page": "{{count}} items",
     "showing": "{{from}}-{{to}} of {{total}}",
     "no_results": "No results found",
