--- a/src/i18n/locales/ja/words.json
+++ b/src/i18n/locales/ja/words.json
@@ -39,6 +39,8 @@
     "sort_oldest": "古い順",
     "sort_alphabetical": "アルファベット順",
     "sort_accuracy": "正確率順",
+    "sort_practice_count_desc": "練習回数が多い順",
+    "sort_practice_count_asc": "練習回数が少ない順",
     "items_per_page": "{{count}} 件表示",
     "showing": "{{from}}-{{to}} / {{total}} 件",
     "no_results": "検索結果がありません",
