refactor: Update display and game engine for improved user experience
- Translated comments and documentation in the CLI display module to English for better accessibility.
- Enhanced the game engine to support a review phase, allowing users to revisit words they struggled with.
- Implemented logic to manage review rounds and limit, providing a structured approach to word practice.
- Updated various components to reflect changes in game state and user interactions, including the addition of a new Kbd component for keyboard shortcuts.
- Improved translations for clarity and consistency across English and Japanese locales.

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "app_name": "TypeFlow",
-  "app_tagline": "The best typing practice app you've ever seen",
+  "app_tagline": "The best typing practice app to become fluent",
   "cancel": "Cancel",
   "save": "Save",
   "delete": "Delete",
