--- a/src/i18n/locales/en/words.json
+++ b/src/i18n/locales/en/words.json
@@ -23,12 +23,13 @@
     "add_title": "Add New Word",
     "edit_title": "Edit Word",
     "word_text": "Word / Text",
-    "word_placeholder": "e.g. Promise.all, async processing",
+    "word_placeholder": "e.g. hello, Promise.all, ひらがな",
     "reading": "Reading (Hiragana)",
     "reading_required": "Required",
-    "reading_placeholder_manual": "Enter in hiragana",
+    "reading_recommended": "Recommended",
+    "reading_placeholder_manual": "Enter in hiragana (optional)",
     "reading_placeholder_auto": "Auto-generated",
-    "reading_hint": "For kanji, please enter the reading manually",
+    "reading_hint": "For kanji, entering the reading is recommended for accurate romaji generation",
     "romaji": "Romaji (for typing)",
     "romaji_placeholder": "Auto-generated / Manual entry"
   },
