--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -1,6 +1,6 @@
 {
   "app_name": "TypeFlow",
-  "app_tagline": "今までにないタイピング練習アプリ",
+  "app_tagline": "確実にうまくなるタイピング練習アプリ",
   "cancel": "キャンセル",
   "save": "保存",
   "delete": "削除",
