--- a/src/i18n/locales/ja/words.json
+++ b/src/i18n/locales/ja/words.json
@@ -23,12 +23,13 @@
     "add_title": "新しい単語を追加",
     "edit_title": "単語を編集",
     "word_text": "単語 / テキスト",
-    "word_placeholder": "例: Promise.all, 非同期処理, ひらがな",
+    "word_placeholder": "例: hello, Promise.all, ひらがな",
     "reading": "読み仮名（ひらがな）",
     "reading_required": "要入力",
-    "reading_placeholder_manual": "ひらがなで入力してください",
+    "reading_recommended": "推奨",
+    "reading_placeholder_manual": "ひらがなで入力（任意）",
     "reading_placeholder_auto": "自動生成",
-    "reading_hint": "漢字を含む場合は、読み仮名を手動で入力してください",
+    "reading_hint": "漢字を含む場合は、正確なローマ字生成のため読み仮名の入力を推奨します",
     "romaji": "ローマ字（タイピング用）",
     "romaji_placeholder": "自動生成 / 手動入力可"
   },
